Added editing the tour list

--- a/src/main/resources/com/example/demo/start-view.fxml
+++ b/src/main/resources/com/example/demo/start-view.fxml
@@ -9,6 +9,9 @@
 <VBox xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.demo.StartViewController"
 >
-    <Button fx:id="createTourButton" onMouseClicked="#onCreateTourButtonClicked"> Create Tour </Button>
+    <Button onMouseClicked="#onCreateTourButtonClicked">Create Tour</Button>
+    <Button onMouseClicked="#onDeleteTourButtonClicked">Delete Tour</Button>
+    <Button onMouseClicked="#onEditTourButtonClicked">Edit Tour</Button>
+    <Button onMouseClicked="#onRefreshListClicked">Refresh List</Button>
     <ListView fx:id="toursListView" prefHeight="200.0" prefWidth="300.0"/>
 </VBox>
